# darwin-core

./: .gitignore  BEST_PRACTICES_2025_COMPLETO.md  DEPLOY_CHECKLIST.md  Dockerfile  Dockerfile.backup  Dockerfile.optimized  Dockerfile.simple  EXTERNAL_ACCESS_SETUP.md  GITHUB_SETUP_INSTRUCTIONS.md  LICENSE  LOCAL_RUNNING.md  README.md  RELEASE_v2.0.0_DESCRIPTION.md  SYNC_STATE.json  UNIFIED_CACHE_GUIDE.md  USAGE_VIA_AI_ASSISTANTS.md  WORKFLOW_RELEASE_ZENODO.md  deploy.sh  generate_protos.sh  mcp_server.py  pyproject.toml  requirements-core.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  run-local.sh  setup_cloudflare.sh  test_components.py  test_grpc.py  test_mcp_integration.py
.darwin/agents/: auto-deploy.sh  darwin-omniscient-agent.sh
.darwin/cluster/k8s/: configmap.yaml  deployment.yaml  grafana.yaml  hpa.yaml  ingress.yaml  namespace.yaml  prometheus.yaml  service.yaml
.darwin/configs/: .darwin-cluster.yaml
.github/workflows/: cd.yml  ci.yml  k8s-deploy.yml  release.yml
app/: main.py
app/agents/: agentic_workflow.py
app/api/: __init__.py  auth.py  gpt_endpoints.py  mcp_router.py  mcp_tools.py  memory_router.py
app/config/: settings.py
app/grpc_services/: core_server.py
app/kec/v1/: kec_pb2.py  kec_pb2.pyi  kec_pb2_grpc.py
app/routers/: __init__.py  corpus.py  health.py  mcp.py  memory_rest.py  models.py  oauth.py
app/services/: agentic_orchestrator.py  auto_training_pipeline.py  chroma_bootstrap.py  chroma_client.py  colpali_visual_rag.py  continuous_learning.py  cost_tracker.py  embedding_manager.py  graph_rag.py  graphrag_hf.py  model_registry.py  model_router.py  model_router_v2.py  model_training.py  plugin_grpc_client.py  pulsar_client.py  qdrant_hybrid_client.py  self_rag.py  selfrag_hf.py  semantic_cache.py  semantic_memory.py  semantic_memory_v2.py  simple_eeg.py  simple_rag.py  unified_cache.py  vllm_server.py  vllm_server_hf.py
app/services/huggingface/: __init__.py  benchmark.py  dataset_publisher.py  model_publisher.py
app/services/neuro/: __init__.py  brain_transformer.py  brain_transformer_v2.py  digital_phenotyping.py  digital_phenotyping_v2.py  eeg_processor.py  eeg_processor_real.py  multimodal_fusion.py  multimodal_fusion_v2.py
docs/agents/: DARWIN_AGENTS.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: CLUSTER_SETUP.md  MONITORING.md
docs/development/: CONTRIBUTING.md
k8s/: chromadb-statefulset.yaml  cloudflared-deployment.yaml  core-deployment.yaml  envoy-gateway-http3.yaml  mcp-secrets.yaml  monitoring-stack.yaml  namespace.yaml  nvidia-device-plugin.yaml  pulsar-cluster.yaml  remote-mcp-deployment.yaml
plugins/physioqm/: Dockerfile  requirements.txt
plugins/physioqm/app/: main.py
(+16 files in other folders)
